--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>site vertical</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">VERMELHO</a></li>
-                <li><a href="#">VERDE</a></li>
-                <li><a href="#">AZUL</a></li>
-                <li><a href="#">AMARELO</a></li>
-                <li><a href="#">ROXO</a></li>
+                <li><a href="#vermelho">VERMELHO</a></li>
+                <li><a href="#verde">VERDE</a></li>
+                <li><a href="#azul">AZUL</a></li>
+                <li><a href="#amarelo">AMARELO</a></li>
+                <li><a href="#roxo">ROXO</a></li>
             </ul>
         </nav>
     </header>
@@ -22,7 +23,7 @@
         <section id="verde" class="grupo"></section>
         <section id="azul" class="grupo"></section>
         <section id="amarelo" class="grupo"></section>
-        <section id="roxo" class="grupo"></section>
+        <section id="roxo" class="grupo">   </section>
     </main>
 </body>
 </html>
